--- a/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
+++ b/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
@@ -36,8 +36,10 @@
               <Component id="saveButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="removeButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="showButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="c2StandardButton" pref="89" max="32767" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="visualizationModel_" min="-2" pref="90" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -46,7 +48,7 @@
               <Component id="plotComboBox_" min="-2" pref="90" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
-          <Component id="jScrollPane1" alignment="0" pref="623" max="32767" attributes="0"/>
+          <Component id="jScrollPane1" alignment="0" pref="716" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -61,6 +63,7 @@
                   <Component id="saveButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="removeButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="showButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="c2StandardButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="446" max="-2" attributes="0"/>
@@ -165,6 +168,17 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="c2StandardButton">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="2C Standard"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c2StandardButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
