--- a/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
+++ b/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
@@ -29,18 +29,26 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
+          <Component id="jScrollPane1" alignment="0" pref="716" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="loadButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="c2StandardButton" alignment="0" pref="75" max="32767" attributes="0"/>
+                  <Component id="loadButton" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="saveButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="c2CorrectButton" min="0" pref="0" max="32767" attributes="1"/>
+                  <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="removeButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="showButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="c2StandardButton" pref="89" max="32767" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Component id="pairsButton" min="0" pref="0" max="32767" attributes="1"/>
+                  <Component id="showButton" alignment="1" max="32767" attributes="1"/>
+              </Group>
+              <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
               <Component id="visualizationModel_" min="-2" pref="90" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="visualizationMagnification_" min="-2" pref="90" max="-2" attributes="0"/>
@@ -48,25 +56,35 @@
               <Component id="plotComboBox_" min="-2" pref="90" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
-          <Component id="jScrollPane1" alignment="0" pref="716" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="loadButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                  <Component id="plotComboBox_" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="visualizationMagnification_" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="visualizationModel_" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="saveButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                  <Component id="removeButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                  <Component id="showButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                  <Component id="c2StandardButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="loadButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="saveButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="removeButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="showButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="c2StandardButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="pairsButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                          <Component id="c2CorrectButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="plotComboBox_" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="visualizationMagnification_" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="visualizationModel_" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="446" max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="422" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -179,6 +197,28 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c2StandardButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="pairsButton">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Pairs"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pairsButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="c2CorrectButton">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="2C Correct"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c2CorrectButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
