--- a/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
+++ b/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
@@ -29,32 +29,40 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" alignment="0" pref="716" max="32767" attributes="0"/>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="c2StandardButton" alignment="0" pref="75" max="32767" attributes="0"/>
-                  <Component id="loadButton" alignment="0" min="-2" max="-2" attributes="0"/>
-              </Group>
+          <Component id="jScrollPane1" alignment="0" pref="812" max="32767" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="c2CorrectButton" min="0" pref="0" max="32767" attributes="1"/>
-                  <Component id="saveButton" alignment="0" max="32767" attributes="1"/>
+                  <Component id="c2CorrectButton" alignment="0" min="0" pref="0" max="32767" attributes="1"/>
+                  <Component id="c2StandardButton" alignment="0" pref="91" max="32767" attributes="1"/>
+                  <Component id="loadButton" alignment="1" max="32767" attributes="1"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="removeButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="pairsButton" min="0" pref="0" max="32767" attributes="1"/>
-                  <Component id="showButton" alignment="1" max="32767" attributes="1"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="saveButton" min="-2" max="-2" attributes="1"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="removeButton" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="showButton" min="-2" max="-2" attributes="1"/>
+                              <EmptySpace min="-2" pref="175" max="-2" attributes="0"/>
+                              <Component id="visualizationModel_" min="-2" pref="90" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="visualizationMagnification_" min="-2" pref="90" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="plotComboBox_" min="-2" pref="90" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="referenceName_" min="-2" pref="234" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
+                      <Component id="pairsButton" min="-2" max="-2" attributes="1"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
-              <Component id="visualizationModel_" min="-2" pref="90" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="visualizationMagnification_" min="-2" pref="90" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="plotComboBox_" min="-2" pref="90" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -62,29 +70,27 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="loadButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                          <Component id="saveButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                          <Component id="removeButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                          <Component id="showButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="c2StandardButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                          <Component id="pairsButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                          <Component id="c2CorrectButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="plotComboBox_" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="visualizationMagnification_" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="visualizationModel_" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="loadButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="removeButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="saveButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="showButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="visualizationMagnification_" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="visualizationModel_" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="plotComboBox_" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="422" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="c2StandardButton" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="referenceName_" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="c2CorrectButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="pairsButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="401" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,7 +100,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="jTable1_">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="myTableModel_" type="code"/>
@@ -193,7 +199,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="10" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="2C Standard"/>
+        <Property name="text" type="java.lang.String" value="2C Reference"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c2StandardButtonActionPerformed"/>
@@ -220,6 +226,14 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="c2CorrectButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="referenceName_">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="11" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="jLabel1"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
