--- a/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
+++ b/plugins/Gaussian/source/edu/valelab/GaussianFit/DataCollectionForm.form
@@ -60,6 +60,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="93" max="-2" attributes="0"/>
                       <Component id="pairsButton" min="-2" max="-2" attributes="1"/>
+                      <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
+                      <Component id="unjitterButton_" min="-2" max="-2" attributes="1"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
@@ -88,6 +90,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="c2CorrectButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="pairsButton" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
+                  <Component id="unjitterButton_" alignment="3" min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="401" max="-2" attributes="0"/>
@@ -234,6 +237,17 @@
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="unjitterButton_">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="10" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="UnJitter"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="unjitterButton_ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
